--- a/404.html
+++ b/404.html
@@ -9,20 +9,20 @@
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
 </head>
 <body>
-  <div id="app"></div>
+  <section class="cover show">
+    <div class="cover-main">
+      <h1>You found a dead link :-(</h1>
+      <p>
+        <a href="/">Visit main page</a>
+      </p>
+    </div>
+  </section>
   <script>
     window.$docsify = {
       name: '',
-      repo: '',
-      loadSidebar: true,
-      subMaxLevel: 2,
-      alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
-      },
       ga: 'UA-1934760-14',
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
 </body>
 </html>
